Fix hide title css module to use visibility hidden instead of display none

--- a/skins/optional/global/hideTitleIfLogoPresent.css
+++ b/skins/optional/global/hideTitleIfLogoPresent.css
@@ -1,3 +1,4 @@
+/* Hide the title if a logo is present. Use visibility in case skins rely on it for spacing */
 :has(.detailLogo:not(.hide)) .nameContainer {
-    display: none;
+    visibility: hidden;
 }
